--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ theme:
         name: Switch to dark mode
 
 markdown_extensions:
+  - attr_list
   - pymdownx.highlight:
       anchor_linenums: true
   - pymdownx.inlinehilite
@@ -60,7 +61,6 @@ extra_javascript:
 
 nav:
   - index.md
-  - Introduction: introduction/index.md
   - Theory: theory/index.md
   - Applications:
     - applications/index.md
