made quiz look better

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -89,15 +89,15 @@
   },
   "active": "461456df2e844b4c",
   "lastOpenFiles": [
-    "docs/theory/qm.md",
-    "docs/theory/wpd.md",
-    "docs/theory/hupd.md",
-    "docs/quiz/index.md",
-    "docs/resources/index.md",
-    "docs/quiz/img/happy.jpg",
-    "docs/applications/app3.md",
-    "docs/applications/app2.md",
     "docs/applications/electron.md",
-    "docs/img/heisenberg.jpg"
+    "docs/resources/index.md",
+    "docs/theory/qm.md",
+    "docs/quiz/index.md",
+    "docs/theory/wpd.md",
+    "docs/quiz/img/happy.jpg",
+    "docs/theory/hupd.md",
+    "Pasted image 20221004105030.png",
+    "docs/applications/app3.md",
+    "docs/applications/app2.md"
   ]
 }
