--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "docs/resources/index.md",
+            "file": "docs/index.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "docs/resources/index.md",
+                "file": "docs/index.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,14 +89,14 @@
   },
   "active": "461456df2e844b4c",
   "lastOpenFiles": [
+    "docs/theory/qm.md",
+    "docs/resources/index.md",
     "docs/theory/wpd.md",
     "docs/applications/app3.md",
     "docs/applications/app2.md",
-    "docs/theory/qm.md",
     "docs/quiz/index.md",
     "docs/theory/hupd.md",
     "docs/applications/electron.md",
-    "docs/resources/index.md",
     "docs/index.md",
     "docs/quiz/img/sad.jpg"
   ]
